:sparkles: adicionando avaliação ao projeto
